//------------------------------------------------------------------------------
// {C} Copyright 2018 Pensando Systems Inc. All rights reserved
//
// protobuf specification for security group profile
//------------------------------------------------------------------------------

syntax = "proto3";
package netproto;

// Mandatory imports.
import "google/api/annotations.proto";
import public "github.com/pensando/sw/venice/utils/apigen/annotations/includes.proto";
import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "github.com/pensando/sw/api/meta.proto";

// ---------------------------- SecurityProfile API ----------------------------
// SecurityProfile controller api
service SecurityProfileApiV1 {
    // options for auto generating rest endpoints
    option(venice.naplesRestService) = {
        Object: "SecurityProfile",
        Method: ["list", "post", "delete", "put"],
        Pattern: "/{ObjectMeta.Tenant}/{ObjectMeta.Namespace}/{ObjectMeta.Name}",
        Prefix: "api/security/profiles"
        Version: "V1"
    };

    rpc ListSecurityProfiles (api.ListWatchOptions) returns (SecurityProfileList) {};
    rpc WatchSecurityProfiles (api.ListWatchOptions) returns (stream SecurityProfileEventList) {};
    rpc SecurityProfileOperUpdate (stream SecurityProfileEvent) returns (api.TypeMeta) {};

//    rpc GetSecurityProfile (api.ObjectMeta) returns (SecurityProfile) {};
//    rpc ListSecurityProfiles (api.ObjectMeta) returns (SecurityProfileList) {};
//    rpc WatchSecurityProfiles (api.ObjectMeta) returns (stream SecurityProfileEventList) {};
//    rpc UpdateSecurityProfile (SecurityProfile) returns (SecurityProfile) {};
//    rpc SecurityProfileOperUpdate (stream SecurityProfileEvent) returns (api.TypeMeta) {};

}

// SecurityProfile object
message SecurityProfile {
    api.TypeMeta            TypeMeta    = 1 [(gogoproto.embed) = true, (gogoproto.nullable) = false, (gogoproto.jsontag) = ",inline"];
    api.ObjectMeta          ObjectMeta  = 2 [(gogoproto.embed) = true, (gogoproto.nullable) = false, (gogoproto.jsontag) = "meta,omitempty"];
    SecurityProfileSpec     Spec        = 3 [(gogoproto.nullable) = false, (gogoproto.jsontag) = "spec,omitempty"];
    SecurityProfileStatus   Status      = 4 [(gogoproto.nullable) = false, (gogoproto.jsontag) = "status,omitempty"];
}


// SecurityProfileSpec captures all the security profile configuration
message SecurityProfileSpec {
    // Vrfs the security profile is attached to
    repeated string AttachVrfs        = 1 [(gogoproto.nullable) = true, (gogoproto.jsontag) = "attach-vrfs,omitempty"];
    // Timeouts for the security profile
    Timeouts    Timeouts              = 2 [(gogoproto.nullable) = true, (gogoproto.jsontag) = "timeouts,omitempty"];
	// Rate limits for the security profile
	RateLimits  RateLimits            = 3 [(gogoproto.nullable) = true, (gogoproto.jsontag) = "rate-limits"];
}


// Timeouts for the security profile in seconds, minutes etc, 1m, 45s
message Timeouts {
    //SessionIdle Timeout.
    string SessionIdle          = 1  [(gogoproto.nullable) = true, (gogoproto.jsontag) = "session-idle,omitempty", (venice.default) = "90s", (venice.check) = "Duration(30s,172800s)"];

    // TCP Timeout
    string TCP                  = 2  [(gogoproto.nullable) = true, (gogoproto.jsontag) = "tcp,omitempty", (venice.default) = "3600s", (venice.check) = "Duration(1s,172800s)"];

    // TCP Drop Timeout
    string TCPDrop              = 3  [(gogoproto.nullable) = true, (gogoproto.jsontag) = "tcp-drop,omitempty", (venice.default) = "90s", (venice.check) = "Duration(1s,300s)"];

    // TCP Connection Setup Timeout
    string TCPConnectionSetup   = 4  [(gogoproto.nullable) = true, (gogoproto.jsontag) = "tcp-connection-setup,omitempty", (venice.default) = "30s", (venice.check) = "Duration(1s,60s)"];

    // TCP Close timeout
    string TCPClose             = 5  [(gogoproto.nullable) = true, (gogoproto.jsontag) = "tcp-close,omitempty", (venice.default) = "15s", (venice.check) = "Duration(1s,300s)"];

    // TCP Half Close timeout
    string TCPHalfClose         = 6  [(gogoproto.nullable) = true, (gogoproto.jsontag) = "tcp-half-close,omitempty", (venice.default) = "120s", (venice.check) = "Duration(1s,172800s)"];

    // Drop timeout for non tcp, udp and icmp
    string Drop                 = 7  [(gogoproto.nullable) = true, (gogoproto.jsontag) = "drop,omitempty", (venice.default) = "60s", (venice.check) = "Duration(1s,300s)"];

    // UDP Timeout
    string UDP                  = 8  [(gogoproto.nullable) = true, (gogoproto.jsontag) = "udp,omitempty", (venice.default) = "30s", (venice.check) = "Duration(1s,172800s)"];

    // UDP Drop Timeout
    string UDPDrop              = 9  [(gogoproto.nullable) = true, (gogoproto.jsontag) = "udp-drop,omitempty", (venice.default) = "60s", (venice.check) = "Duration(1s,172800s)"];

    // ICMP Timeout
    string ICMP                 = 10 [(gogoproto.nullable) = true, (gogoproto.jsontag) = "icmp,omitempty", (venice.default) = "6s", (venice.check) = "Duration(1s,172800s)"];

    // ICMP Drop Timeout
    string ICMPDrop             = 11 [(gogoproto.nullable) = true, (gogoproto.jsontag) = "icmp-drop,omitempty", (venice.default) = "60s", (venice.check) = "Duration(1s,300s)"];
}

// RateLimits for security profile in x units
message RateLimits {
	// Tcp Half OpenSession Limit
	uint32 TcpHalfOpenSessionLimit  = 1 [(gogoproto.nullable) = true, (gogoproto.jsontag) = "tcp-half-open-session-limit", (venice.default) = "0", (venice.check) = "IntRange(0,128000)"];
	// Udp Active Session Limit
	uint32 UdpActiveSessionLimit    = 2 [(gogoproto.nullable) = true, (gogoproto.jsontag) = "udp-active-session-limit", (venice.default) = "0", (venice.check) = "IntRange(0,128000)"];
	// Icmp Active Session Limit
	uint32 IcmpActiveSessionLimit   = 3 [(gogoproto.nullable) = true, (gogoproto.jsontag) = "icmp-active-session-limit", (venice.default) = "0", (venice.check) = "IntRange(0,128000)"];
	// Other Active Session Limit
	uint32 OtherActiveSessionLimit  = 4 [(gogoproto.nullable) = true, (gogoproto.jsontag) = "other-active-session-limit", (venice.default) = "0", (venice.check) = "IntRange(0,128000)"];
}

// SecurityProfileStatus captures the security profile status
message SecurityProfileStatus {
    uint64 SecurityProfileID              = 1 [(gogoproto.jsontag) = "id,omitempty"];
}

message SecurityProfileList {
    repeated SecurityProfile SecurityProfiles  = 1;
}

// security profile watch event
message SecurityProfileEvent {
    api.EventType   EventType           = 1 [(gogoproto.jsontag) = "event-type,omitempty"];
    SecurityProfile SecurityProfile     = 2 [(gogoproto.nullable) = false, (gogoproto.jsontag) = "sg-profile,omitempty"];
}



// secprofile watch events batched
message SecurityProfileEventList {
    repeated SecurityProfileEvent SecurityProfileEvents  = 1;
}
